#1009 create list promotion page (#1033)